global architecture refacturing