@@ -1,39 +1,30 @@
 package hexlet.code.games;
-import hexlet.code.Engine;
-import java.util.Arrays;
-import java.util.List;
 
+import hexlet.code.Engine;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Random;
 
 public final class CalcGame {
-
     public static void play() {
-        List<String> list = Arrays.asList("+", "-", "*");
-
-        System.out.println("What is the result of the expression?");
+        List<String> list = List.of("+", "-", "*");
+        List<String> questions = new ArrayList<>();
+        List<String> answers = new ArrayList<>();
+        String desriptionGame = "What is the result of the expression?";
 
         for (int i = 0; i <= 2; i++) {
-            int random1 = Engine.getRandomInt();
-            int random2 = Engine.getRandomInt();
-            String randomElement = list.get(Engine.getRandomInt(list.size()));
-
-            int result = calculateResult(randomElement, random1, random2);
-
-            Engine.askQuestion(random1 + " " + randomElement + " " + random2);
-            int answer = Engine.getAnswerInt();
-
-            if (Engine.checkAnswer(answer, result)) {
-                break;
-            }
-
-            if (i == 2) {
-                Engine.congratulation();
-            }
-
+            Random random = new Random();
+            int random1 = random.nextInt(101);
+            int random2 = random.nextInt(101);
+            String randomElement = list.get(random.nextInt(list.size()));
+            answers.add(calculateResult(randomElement, random1, random2));
+            questions.add(random1 + " " + randomElement + " " + random2);
         }
-
+        Engine.play(desriptionGame, questions, answers);
     }
 
-    private static int calculateResult(String randomElement, int random1, int random2) {
+    private static String calculateResult(String randomElement, int random1, int random2) {
         int result = 0;
         if (randomElement.equals("+")) {
             result = random1 + random2;
@@ -42,8 +33,6 @@ public final class CalcGame {
         } else if (randomElement.equals("*")) {
             result = random1 * random2;
         }
-        return result;
+        return String.valueOf(result);
     }
-
-
 }
